--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,13 @@
     "name": "executecodetest",
     "version": "6.9",
     "manifest_version": 3,
-    "permissions": ["activeTab", "scripting"],
-    "content_scripts": [
-        {
-          "matches": ["<all_urls>"],
-          "js": ["content.js"]
-        }
-      ]
+    "minimum_chrome_version": "120",
+    "permissions": ["activeTab", "scripting", "userScripts"],
+    "host_permissions": [
+      "*://*/*"
+    ],
+    "background": {
+      "service_worker": "background.js",
+      "type": "module"
+    }
 }
