--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,20 @@
 {
-    "name": "executecodetest",
-    "version": "6.9",
-    "manifest_version": 3,
-    "minimum_chrome_version": "120",
-    "permissions": ["activeTab", "scripting", "userScripts"],
-    "host_permissions": [
-      "*://*/*"
-    ],
-    "background": {
-      "service_worker": "background.js",
-      "type": "module"
+  "manifest_version": 3,
+  "name": "JS Eval Extension",
+  "version": "1.0",
+  "description": "Execute JavaScript code on the current page",
+  "permissions": ["activeTab", "scripting"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "images/icon16.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
     }
+  },
+  "icons": {
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
+  }
 }
